# piflow-engine

./: .gitignore  pyproject.toml
cn/piflow/core/: flow.py  flow_bean.py  process.py  process_impl.py  runner.py  runner_listener.py  runtime_context.py  stop.py  stop_bean.py  stop_job.py  stream.py  stream_impl.py
cn/piflow/engine/local/: __init__.py  command_invocation_parser.py  command_stop.py  constants.py  file_save_stop.py  resolver.py  source_file_stop.py
cn/piflow/runtime/: __init__.py  run_tracking_listener.py
cn/piflow/runtime/logging/: __init__.py
cn/piflow/runtime/store/postgres/: PostgresRunStore.py  __init__.py
tests/: test_source_stop_pdf_text_extract.py
tests/workspace/process_d38a813b759a4831a934b5abf54b7bcb/csvformatter_job_99b288b909f6405980f85f1ecf28bfe9_bcb734f5/meta/: execution.json
tests/workspace/process_d5e7fbf0065548db833031b733407207/BlankLineClean_job_e4701949001f4a399e76f72e84770219_980abff6/meta/: execution.json
tests/workspace/process_d5e7fbf0065548db833031b733407207/PdfMetadataExtract_job_b3fcadb78abc47de83cdc6fa9e0fd453_de3c6ff2/meta/: execution.json
tests/workspace/process_d5e7fbf0065548db833031b733407207/PdfMetadataToCsv_job_44e6e5991d7f4f9097ecf5f895b91750_dd87567d/meta/: execution.json
